--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,22 +1,22 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="6b85f9">  <td>25/01/16 18:20:06</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Baseclass_FitPeo_Healthcare.beforeMethod()[pri:0, instance:test_scripts.TestClass1_test@10683d9d]">&gt;&gt;beforeMethod</td> 
-<td>&nbsp;</td>  <td>main@1536471117</td>   <td></td> </tr>
-<tr bgcolor="6b85f9">  <td>25/01/16 18:20:02</td>   <td>-3596</td> <td>&nbsp;</td><td title="&gt;&gt;Baseclass_FitPeo_Healthcare.beforeTest()[pri:0, instance:test_scripts.TestClass1_test@10683d9d]">&gt;&gt;beforeTest</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1536471117</td>   <td></td> </tr>
-<tr bgcolor="9d6772">  <td>25/01/16 18:20:08</td>   <td>2467</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestClass1_test.tc_01_test()[pri:0, instance:test_scripts.TestClass1_test@10683d9d]">tc_01_test</td> 
-  <td>main@1536471117</td>   <td></td> </tr>
-<tr bgcolor="6b85f9">  <td>25/01/16 18:20:02</td>   <td>-3951</td> <td title="&gt;&gt;Baseclass_FitPeo_Healthcare.beforeSuite()[pri:0, instance:test_scripts.TestClass1_test@10683d9d]">&gt;&gt;beforeSuite</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1536471117</td>   <td></td> </tr>
-<tr bgcolor="6b85f9">  <td>25/01/16 18:20:42</td>   <td>35851</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Baseclass_FitPeo_Healthcare.afterClass()[pri:0, instance:test_scripts.TestClass1_test@10683d9d]">&lt;&lt;afterClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1536471117</td>   <td></td> </tr>
-<tr bgcolor="6b85f9">  <td>25/01/16 18:20:42</td>   <td>36508</td> <td title="&lt;&lt;Baseclass_FitPeo_Healthcare.afterSuite()[pri:0, instance:test_scripts.TestClass1_test@10683d9d]">&lt;&lt;afterSuite</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1536471117</td>   <td></td> </tr>
-<tr bgcolor="6b85f9">  <td>25/01/16 18:20:41</td>   <td>35595</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Baseclass_FitPeo_Healthcare.afterMethod()[pri:0, instance:test_scripts.TestClass1_test@10683d9d]">&lt;&lt;afterMethod</td> 
-<td>&nbsp;</td>  <td>main@1536471117</td>   <td></td> </tr>
-<tr bgcolor="6b85f9">  <td>25/01/16 18:20:42</td>   <td>35974</td> <td>&nbsp;</td><td title="&lt;&lt;Baseclass_FitPeo_Healthcare.afterTest()[pri:0, instance:test_scripts.TestClass1_test@10683d9d]">&lt;&lt;afterTest</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1536471117</td>   <td></td> </tr>
-<tr bgcolor="6b85f9">  <td>25/01/16 18:20:02</td>   <td>-3583</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Baseclass_FitPeo_Healthcare.beforeClass()[pri:0, instance:test_scripts.TestClass1_test@10683d9d]">&gt;&gt;beforeClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1536471117</td>   <td></td> </tr>
+<tr bgcolor="968b99">  <td>25/01/21 19:28:58</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Baseclass_FitPeo_Healthcare.beforeClass()[pri:0, instance:test_scripts.TestClass1_test@6f03482]">&gt;&gt;beforeClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@989447607</td>   <td></td> </tr>
+<tr bgcolor="968b99">  <td>25/01/21 19:28:58</td>   <td>-13</td> <td>&nbsp;</td><td title="&gt;&gt;Baseclass_FitPeo_Healthcare.beforeTest()[pri:0, instance:test_scripts.TestClass1_test@6f03482]">&gt;&gt;beforeTest</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@989447607</td>   <td></td> </tr>
+<tr bgcolor="968b99">  <td>25/01/21 19:29:38</td>   <td>39994</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Baseclass_FitPeo_Healthcare.afterClass()[pri:0, instance:test_scripts.TestClass1_test@6f03482]">&lt;&lt;afterClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@989447607</td>   <td></td> </tr>
+<tr bgcolor="90a9b0">  <td>25/01/21 19:29:02</td>   <td>4309</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestClass1_test.tc_01_test()[pri:0, instance:test_scripts.TestClass1_test@6f03482]">tc_01_test</td> 
+  <td>main@989447607</td>   <td></td> </tr>
+<tr bgcolor="968b99">  <td>25/01/21 19:28:57</td>   <td>-395</td> <td title="&gt;&gt;Baseclass_FitPeo_Healthcare.beforeSuite()[pri:0, instance:test_scripts.TestClass1_test@6f03482]">&gt;&gt;beforeSuite</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@989447607</td>   <td></td> </tr>
+<tr bgcolor="968b99">  <td>25/01/21 19:29:01</td>   <td>3713</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Baseclass_FitPeo_Healthcare.beforeMethod()[pri:0, instance:test_scripts.TestClass1_test@6f03482]">&gt;&gt;beforeMethod</td> 
+<td>&nbsp;</td>  <td>main@989447607</td>   <td></td> </tr>
+<tr bgcolor="968b99">  <td>25/01/21 19:29:38</td>   <td>40136</td> <td>&nbsp;</td><td title="&lt;&lt;Baseclass_FitPeo_Healthcare.afterTest()[pri:0, instance:test_scripts.TestClass1_test@6f03482]">&lt;&lt;afterTest</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@989447607</td>   <td></td> </tr>
+<tr bgcolor="968b99">  <td>25/01/21 19:29:38</td>   <td>40612</td> <td title="&lt;&lt;Baseclass_FitPeo_Healthcare.afterSuite()[pri:0, instance:test_scripts.TestClass1_test@6f03482]">&lt;&lt;afterSuite</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@989447607</td>   <td></td> </tr>
+<tr bgcolor="968b99">  <td>25/01/21 19:29:37</td>   <td>39684</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Baseclass_FitPeo_Healthcare.afterMethod()[pri:0, instance:test_scripts.TestClass1_test@6f03482]">&lt;&lt;afterMethod</td> 
+<td>&nbsp;</td>  <td>main@989447607</td>   <td></td> </tr>
 </table>
